# 1brc

./: .gitignore  .gitmodules  LICENSE  README.md
src/: 01_baseline.cpp  02_mmap.cpp  03_copies.cpp  04_refactor.cpp  05_fixed_point.cpp  06_custom_hash.cpp  07_better_parsing.cpp  08_chunks.cpp  09_dynamic_chunks.cpp  CMakeLists.txt  bench_parse_int.cpp  bench_parse_together.cpp  build.sh  configure.sh  diff.sh  trunc.txt
